map role to Spring Security authorities